--- a/buddybeats/app/views/password_resets/new.html.erb
+++ b/buddybeats/app/views/password_resets/new.html.erb
@@ -5,6 +5,8 @@
     <%= label_tag :enter_your_email %>
     <%= text_field_tag :email, params[:email] %>
   </div><p>
-  <div class="actions"><%= submit_tag "Reset Password", :class => 'btn btn-default' %></div>
+  <div class="actions">
+    <%= submit_tag "Reset Password", :class => 'btn btn-default' %>
+  </div>
 <% end %>
 </div>
