--- a/buddybeats/app/views/password_resets/edit.html.erb
+++ b/buddybeats/app/views/password_resets/edit.html.erb
@@ -1,25 +1,32 @@
 <h1>Reset Password</h1>
-<div class="form-container">
 
-<%= form_for @account, :url => password_reset_path(params[:id]) do |f| %>
+<div class="form-container">
+  <%= form_for @account, :url => password_reset_path(params[:id]) do |f| %>
   <% if @account.errors.any? %>
-    <div class="error_messages">
-      <h2>Form is invalid</h2>
-      <ul>
-        <% for message in @account.errors.full_messages %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
+  <div class="error_messages">
+    <h2>Form is invalid</h2>
+
+    <ul>
+      <% for message in @account.errors.full_messages %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
   <% end %>
+
   <div class="field">
     <%= f.label :password %>
     <%= f.password_field :password %>
   </div>
+
   <div class="field">
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
   </div><p>
-  <div class="actions"><%= f.submit "Update Password", :class => 'btn btn-default' %></div>
-<% end %>
+
+  <div class="actions">
+    <%= f.submit "Update Password", :class => 'btn btn-default' %>
+  </div>
+  <% end %>
+
 </div>
