--- a/buddybeats/app/views/playlists/all.html.erb
+++ b/buddybeats/app/views/playlists/all.html.erb
@@ -1,19 +1,25 @@
 <h1>Browse Public Playlists</h1>
 
-
-
 <table class="table table-hover table-nonfluid">
-<tr><td><strong>Playlist Title</strong></td><td></td>
-  <td><strong>Platform</strong></td><td></td>
-  <td><strong>Owner</strong></td></tr>
-<% @playlists.each do |inc| %>
-<tr><td>
-<li><a href=/playlists/<%= inc.random_hex %>><%= inc.title %></a></li><td></td><td><%= inc.platform %></td>
-</td><td></td><td><%= @all_accounts.find(inc.account_id).user_name %></td></tr>
-<% end %>
-
+  <tr>
+    <td><strong>Playlist Title</strong></td>
+    <td></td>
+    <td><strong>Platform</strong></td>
+    <td></td>
+    <td><strong>Owner</strong></td>
+  </tr>
+  <% @playlists.each do |inc| %>
+  <tr>
+    <td><li><a href=/playlists/<%= inc.random_hex %>><%= inc.title %></a></li></td>
+    <td></td>
+    <td><%= inc.platform %></td>
+    <td></td>
+    <td><%= @all_accounts.find(inc.account_id).user_name %></td>
+  </tr>
+  <% end %>
 </table>
 <p><p>
-<form action="/playlists/new">
+  <form action="/playlists/new">
     <input type="submit" value="Add New Playlist" class="btn btn-default">
-</form><p>
+  </form>
+  <p>
