--- a/buddybeats/app/views/playlists/mylists.html.erb
+++ b/buddybeats/app/views/playlists/mylists.html.erb
@@ -1,21 +1,18 @@
 <h1>My Playlists</h1>
 
 <ol>
-<% @playlists.each do |inc| %>
+  <% @playlists.each do |inc| %>
 
-<li><a href=/playlists/<%= inc.random_hex %>><%= inc.title %></a> on <%= inc.platform %> &nbsp;&nbsp;&nbsp; <%= link_to image_tag('delete-icon2.png'), playlist_path(inc),
+    <li>
+      <a href=/playlists/<%= inc.random_hex %>><%= inc.title %></a> on <%= inc.platform %> &nbsp;&nbsp;&nbsp; <%= link_to image_tag('delete-icon2.png'), playlist_path(inc),
               method: :delete,
-              data: { "sweet-alert-confirm": "Are you sure you want to delete this playlist?" } %> &nbsp; <%= link_to image_tag('edit-icon3.png'), edit_playlist_path(inc) %></li>
-
-
-
-
-
-<% end %>
+              data: { "sweet-alert-confirm": "Are you sure you want to delete this playlist?" } %> &nbsp; <%= link_to image_tag('edit-icon3.png'), edit_playlist_path(inc) %>
+    </li>
+    <% end %>
 </ol>
-<!-- <p><p><a href=/playlists/new>Add New Playlist</a> -->
 
 <p><p>
 <form action="/playlists/new">
     <input type="submit" value="Add New Playlist" class="btn btn-default">
-</form><p>
+</form>
+<p>
