--- a/buddybeats/app/views/playlists/new.html.erb
+++ b/buddybeats/app/views/playlists/new.html.erb
@@ -11,11 +11,16 @@
 
     <p><div id="quantity"><%= inc.label :quantity %><img src=/images/question-mark.png title="How many song additions do you want to allow per person?"></div>
     <%= inc.number_field :quantity, in: 1.0..10.0 %></p>
-
 </div>
+
     <table>
-      <tr><td><strong>Platform</strong></td><td></td></tr>
-      <tr><td></td><td>
+      <tr>
+        <td><strong>Platform</strong></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>
 
         <p><%= inc.radio_button :platform, "YouTube" %>
         <%= inc.label :platform_youtube, "YouTube" %></p>
@@ -23,9 +28,15 @@
         <p><%= inc.radio_button :platform, "Spotify" %>
         <%= inc.label :platform_spotify, "Spotify" %></p>
 
-      </td></tr>
-      <tr><td><strong>Listing</strong></td><td></td></tr>
-      <tr><td></td><td>
+        </td>
+      </tr>
+      <tr>
+        <td><strong>Listing</strong></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>
 
         <p><%= inc.radio_button :public, true %>
         <%= inc.label :public_true, "Public" %></p>
@@ -33,13 +44,9 @@
         <p><%= inc.radio_button :public, false %>
         <%= inc.label :public_false, "Private" %></p>
 
-      </td></tr>
-
-    </table>
-
-
-
-
+      </td>
+    </tr>
+  </table>
 
     <%= inc.hidden_field :account_id, :value => @current_account.id %>
     <%= inc.hidden_field :random_hex, :value => SecureRandom.hex(5) %>
