--- a/buddybeats/app/views/songs/edit_alternate.erb
+++ b/buddybeats/app/views/songs/edit_alternate.erb
@@ -1,3 +1,4 @@
+<!-- This page is not being used, but being saved for reference. -->
 <h1>Songs#edit</h1>
 
 <h1>Editing song</h1>
@@ -27,8 +28,6 @@
     <%= inc.label :youtube_id %><br>
     <%= inc.text_area :youtube_id %>
   </p>
-
-
 
   <p>
     <%= inc.submit %>
