--- a/buddybeats/app/views/songs/mysongs.html.erb
+++ b/buddybeats/app/views/songs/mysongs.html.erb
@@ -1,37 +1,49 @@
 <h1>My Songs</h1>
 
-<div id="playlistLink">
+<p>
+  <a href='http://www.youtube.com/watch_videos?video_ids=<%= @formattedYouTubeIDS %>' target='_blank'>View playlist of all your YouTube submissions</a>
+</p>
+<p>
+  <a href='https://play.spotify.com/trackset/BuddyBeats/<%= @formattedSpotifyIDS %>' target='_blank'>View playlist of all your Spotify submissions</a>
+</p>
 
-</div>
 
 <table class="table table-hover">
-  <tr><td></td>
+  <tr>
+    <td></td>
     <td><strong>Title</strong></td>
+    <td><strong>Platform</strong></td>
+    <td><strong>Playlist</strong></td>
     <td><strong>Date Added</strong></td>
-      <td><strong>Delete or Edit</strong></td>
+    <td><strong>Delete or Edit</strong></td>
   </tr>
-  <% @idsForPlaylist = [] %>
 
-<% @songs.each do |inc| %>
-<% @idsForPlaylist.push(inc.youtube_id) %>
-
-<tr>
-<td>
-<% if inc.spotify_img %>
-<img src="<%= inc.spotify_img %>" height="90">
-<% else %>
-<img src="http://img.youtube.com/vi/<%=inc.youtube_id%>/mqdefault.jpg" height="90">
-<% end %>
-</td>
-<td><li><%= inc.title %></td>
-<td><%= inc.created_at.strftime("%m/%d/%Y") %></td>
-<td><%= link_to image_tag('delete-icon2.png'), song_path(inc),
+  <% @songs.each do |inc| %>
+  <tr>
+    <td>
+      <% if inc.spotify_img %>
+        <div class="text-center">
+          <a href="http://play.spotify.com/track/<%=inc.spotify_id%>" target="_blank"><img src="<%= inc.spotify_img %>" height="90"></a>
+        </div>
+      <% else %>
+        <a href="http://www.youtube.com/watch?v=<%=inc.youtube_id%>" target="_blank"><img src="http://img.youtube.com/vi/<%=inc.youtube_id%>/mqdefault.jpg" height="90"></a>
+      <% end %>
+    </td>
+    <td><li><%= inc.title %></td>
+      <td>
+        <% if inc.spotify_img %>
+          Spotify
+        <% else %>
+          YouTube
+        <% end %>
+      </td>
+      <td>
+        <a href=/playlists/<%= inc.playlist_hex %>>View</a>
+      </td>
+    <td><%= inc.created_at.strftime("%m/%d/%Y") %></td>
+    <td><%= link_to image_tag('delete-icon2.png'), song_path(inc),
               method: :delete,
-              data: { "sweet-alert-confirm": "Are you sure you want to delete this song?" } %> &nbsp; <%= link_to image_tag('edit-icon3.png'), edit_song_path(inc) %></li></td></tr>
-<% end %>
+              data: { "sweet-alert-confirm": "Are you sure you want to delete this song?" } %> &nbsp; <%= link_to image_tag('edit-icon3.png'), edit_song_path(inc) %></li></td>
+  </tr>
+  <% end %>
 </table>
-<% @formattedIDS = @idsForPlaylist.join(",") %>
-
-<script type="text/javascript">
-$( "#playlistLink" ).append( "<a href='http://www.youtube.com/watch_videos?video_ids=<%= @formattedIDS %>' target='_blank'>View playlist of all your songs</a>" );
-</script>
