--- a/buddybeats/app/views/songs/search.html.erb
+++ b/buddybeats/app/views/songs/search.html.erb
@@ -1,33 +1,22 @@
-<h1>Search YouTube</h1>
 <script>
 var youTubeENV = "<%= ENV['YOUTUBE_API_KEY'] %>"
 </script>
 
-<% @random = params[:random_hex] %>
-<% @playlist_id = session[:playlist_id] %>
-
+<h1>Search YouTube</h1>
 
 <form id="search_form" method="get">
   <input type="text" name="keyword" class="searchbox" placeholder="Search YouTube"></input>
   <button type="submit" value="submit" class="btn btn-default">Submit</button>
 </form>
 
-
-
-<!-- <script>
-searchYouTube("britney")
-</script> -->
 <div class="container-fluid">
   <div class="row">
-<div id=searchResults>
-
+    <div id=searchResults>
+    </div>
+  </div>
 </div>
-</div>
-</div>
 
-
-<!-- <div id='content'></div> -->
-
+<!-- Underscore template -->
 <script type='text/template' id='search_template'>
 
     <div class="col-sm-6 col-md-4">
@@ -35,26 +24,25 @@ searchYouTube("britney")
         <img src="{{= snippet.thumbnails.high.url}}">
         <div class="caption">
           <h3>{{= snippet.title }}</h3>
-          <p><a href="http://www.youtube.com/watch?v={{= id.videoId }}" target="_blank">Preview on YouTube</p>
+          <p><a href="http://www.youtube.com/watch?v={{= id.videoId }}" target="_blank">Preview on YouTube</a></p>
 
           <form class="new_song" id="new_song" action="/songs" method="post">
 
-          <input type="hidden" name="authenticity_token" value=<%= form_authenticity_token %>>
+            <input type="hidden" name="authenticity_token" value=<%= form_authenticity_token %>>
 
-          <input type="hidden" name="song[title]" id="song_title" value="{{= snippet.title }}">
+            <input type="hidden" name="song[title]" id="song_title" value="{{= snippet.title }}">
 
-          <input type="hidden" name="song[youtube_id]" id="song_youtube_id" value={{= id.videoId }}>
+            <input type="hidden" name="song[youtube_id]" id="song_youtube_id" value={{= id.videoId }}>
 
-          <input type="hidden" name="song[playlist_id]" id="song_playlist_id" value=<%=@playlist_id%>>
+            <input type="hidden" name="song[playlist_id]" id="song_playlist_id" value=<%=@playlist_id%>>
 
-          <input type="hidden" name="song[playlist_hex]" id="song_playlist_hex" value=<%=@random%>>
+            <input type="hidden" name="song[playlist_hex]" id="song_playlist_hex" value=<%=@playlist_hex%>>
 
-          <input type="hidden" name="song[account_id]" id="song_account_id" value=<%=@current_account.id%>>
+            <input type="hidden" name="song[account_id]" id="song_account_id" value=<%=@current_account.id%>>
 
-          <input type="submit" name="commit" value="Add Song" class="btn btn-primary"/>
+            <input type="submit" name="commit" value="Add Song" class="btn btn-primary"/>
 
           </form>
-
         </div>
       </div>
     </div>
