--- a/buddybeats/app/views/songs/spotifysearch.html.erb
+++ b/buddybeats/app/views/songs/spotifysearch.html.erb
@@ -1,24 +1,16 @@
 <h1>Search Spotify</h1>
 
-<% @random = params[:random_hex] %>
-<% @playlist_id = session[:playlist_id] %>
-
-
 <form id="spotify_search_form" method="get">
   <input type="text" name="keyword" class="searchbox" placeholder="Search Spotify"></input>
   <button type="submit" value="submit" class="btn btn-default">Submit</button>
 </form>
 
-
-
-
-
-<div id=searchResults>
-
+<div class="container-fluid">
+  <div class="row">
+    <div id=searchResults>
+    </div>
+  </div>
 </div>
-
-
-
 
 <script type='text/template' id='spotify_search_template'>
 
@@ -27,26 +19,26 @@
         <img src={{= album.images[1].url }} >
         <div class="caption">
           <h3>{{= artists[0].name }} - {{= name }}</h3>
-          <p><a href="http://play.spotify.com/track/{{= id }}" target="_blank">Preview on Spotify</p>
+          <p><a href="http://play.spotify.com/track/{{= id }}" target="_blank">Preview on Spotify</a></p>
 
 
           <form class="new_song" id="new_song" action="/songs" method="post">
 
-          <input type="hidden" name="authenticity_token" value=<%= form_authenticity_token %>>
+            <input type="hidden" name="authenticity_token" value=<%= form_authenticity_token %>>
 
-          <input type="hidden" name="song[title]" id="song_title" value="{{= artists[0].name }} - {{= name }}">
+            <input type="hidden" name="song[title]" id="song_title" value="{{= artists[0].name }} - {{= name }}">
 
-          <input type="hidden" name="song[spotify_img]" id="song_spotify_img" value="{{= album.images[1].url }}">
+            <input type="hidden" name="song[spotify_img]" id="song_spotify_img" value="{{= album.images[1].url }}">
 
-          <input type="hidden" name="song[spotify_id]" id="song_spotify_id" value="{{= id }}">
+            <input type="hidden" name="song[spotify_id]" id="song_spotify_id" value="{{= id }}">
 
-          <input type="hidden" name="song[playlist_id]" id="song_playlist_id" value=<%=@playlist_id%>>
+            <input type="hidden" name="song[playlist_id]" id="song_playlist_id" value=<%=@playlist_id%>>
 
-          <input type="hidden" name="song[playlist_hex]" id="song_playlist_hex" value=<%=@random%>>
+            <input type="hidden" name="song[playlist_hex]" id="song_playlist_hex" value=<%=@playlist_hex%>>
 
-          <input type="hidden" name="song[account_id]" id="song_account_id" value=<%=@current_account.id%>>
+            <input type="hidden" name="song[account_id]" id="song_account_id" value=<%=@current_account.id%>>
 
-          <input type="submit" name="commit" value="Add Song" class="btn btn-primary"/>
+            <input type="submit" name="commit" value="Add Song" class="btn btn-primary"/>
 
           </form>
 
