--- a/buddybeats/app/views/songs/spotifyshow.html.erb
+++ b/buddybeats/app/views/songs/spotifyshow.html.erb
@@ -1,68 +1,55 @@
+<!-- Hide ability to delete songs if the user is not the playlist owner -->
 <% if !@owner %>
-<% @deleteDisplay = "display:none" %>
+  <% @deleteDisplay = "display:none" %>
 <% else @deleteDisplay = '' %>
 <% end %>
 
 <h1><%= @playlist_title = session[:playlist_title] %></h1>
 <em><%= @playlist_description = session[:playlist_description] %></em>
-<div id="playlistLink">
+<p>
+  <em>(<%= @songSpotifyIDS.length %> songs)</em><p><a href='https://play.spotify.com/trackset/BuddyBeats/<%= @formattedSpotifyIDS %>' target='_blank'>Play in Spotify (Web Player)</a>
+</p>
 
-</div>
-<% @random = session[:playlist_hex] %>
-<input type="text" name="playlist_url_share" value="http://localhost:3000/playlists/<%= @random %>" size="40" readonly="readonly" onclick="this.select()">
+<input type="text" name="playlist_url_share" value="http://localhost:3000/playlists/<%= @playlist_hex %>" size="40" readonly="readonly" onclick="this.select()">
 
-<%= @idsForPlaylist %>
 <div id="fullSongList">
   <div class="table-responsive">
     <ol>
-<table class="table table-hover">
-<tr>
-  <td></td>
-  <td></td>
-  <td><strong>Title</strong></td>
-  <td><strong>Submitted By</strong></td>
-  <td style="<%= @deleteDisplay %>"><strong>Delete</strong></td>
-</tr>
-
-<% @idsForPlaylist = [] %>
-<% @songs.each do |inc| %>
-<% @idsForPlaylist.push(inc.spotify_id) %>
-
-<tr>
-  <td><img src="<%=inc.spotify_img%>" height="90"></td>
-  <td></td>
-  <td><li><%= inc.title %></td>
-  <td><%= @all_accounts.find(inc.account_id).user_name %> </li></td>
-  <td style="<%= @deleteDisplay %>">
-      <%= link_to image_tag('delete-icon2.png'), song_path(inc),
-                    method: :delete,
-                    data: { "sweet-alert-confirm": "Are you sure you want to delete this song?" } %>
-  </td>
-</tr>
-
-<% end %>
-</ol></table>
+      <table class="table table-hover">
+        <tr>
+          <td></td>
+          <td></td>
+          <td><strong>Title</strong></td>
+          <td><strong>Submitted By</strong></td>
+          <td style="<%= @deleteDisplay %>"><strong>Delete</strong></td>
+        </tr>
+        <% @songs.each do |inc| %>
+        <tr>
+          <td><img src="<%=inc.spotify_img%>" height="90"></td>
+          <td></td>
+          <td><li><%= inc.title %></td>
+          <td><%= @all_accounts.find(inc.account_id).user_name %> </li></td>
+          <td style="<%= @deleteDisplay %>">
+              <%= link_to image_tag('delete-icon2.png'), song_path(inc),
+                            method: :delete,
+                            data: { "sweet-alert-confirm": "Are you sure you want to delete this song?" } %>
+          </td>
+        </tr>
+        <% end %>
+      </ol>
+    </table>
+  </div>
 </div>
-</div>
+
 <p></p><p>
-    <form action="/songs/spotifysearch/<%= @random %>">
-      <input type="submit" value="Add Song to Playlist" class="btn btn-default">
-    </form>
 
-<% @formattedIDS = @idsForPlaylist.join(",") %>
+  <form action="/songs/spotifysearch/<%= @playlist_hex %>">
+    <input type="submit" value="Add Song to Playlist" class="btn btn-default">
+  </form>
 
-<script type="text/javascript">
-$( "#playlistLink" ).append( "<em>(<%= @idsForPlaylist.length %> songs)</em><p><a href='https://play.spotify.com/trackset/BuddyBeats/<%= @formattedIDS %>' target='_blank'>Play in Spotify (Web Player)</a>")
-</script>
-
+<!-- If no songs have been added, hide the table. -->
 <% if @songs == [] %>
-<script type="text/javascript">
-$('#fullSongList').hide();
-</script>
+  <script type="text/javascript">
+  $('#fullSongList').hide();
+  </script>
 <% end %>
-
-
-
-<!-- <script type="text/javascript">
-  $('.ownerControls').hide();
-</script> -->
