--- a/buddybeats/app/views/songs/search.html.erb
+++ b/buddybeats/app/views/songs/search.html.erb
@@ -21,7 +21,7 @@ var youTubeENV = "<%= ENV['YOUTUBE_API_KEY'] %>"
 
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="{{= snippet.thumbnails.high.url}}">
+        <img src="{{= snippet.thumbnails.high.url}}" class="img-responsive">
         <div class="caption">
           <h3>{{= snippet.title }}</h3>
           <p><a href="http://www.youtube.com/watch?v={{= id.videoId }}" target="_blank">Preview on YouTube</a></p>
