--- a/buddybeats/app/views/songs/spotifysearch.html.erb
+++ b/buddybeats/app/views/songs/spotifysearch.html.erb
@@ -16,7 +16,7 @@
 
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src={{= album.images[1].url }} >
+        <img src="{{= album.images[1].url }}" class="img-responsive">
         <div class="caption">
           <h3>{{= artists[0].name }} - {{= name }}</h3>
           <p><a href="http://play.spotify.com/track/{{= id }}" target="_blank">Preview on Spotify</a></p>
