added link to simran

--- a/buddybeats/app/views/playlists/about.html.erb
+++ b/buddybeats/app/views/playlists/about.html.erb
@@ -12,7 +12,7 @@
 <p>
   <ul>
     <li>Background image courtesy of <a href=https://pixabay.com/en/headphones-headset-audio-technology-690685/>Pixabay</a></li>
-    <li>Logo provided by Simran Khosla</li>
+    <li>Logo provided by <a href=http://www.simrankhosla.com/>Simran Khosla</a></li>
     <li><a href=https://developers.google.com/youtube/v3/>YouTube Data API</a></li>
     <li><a href=https://developer.spotify.com/web-api/>Spotify Web API</a></li>
     <li><a href=http://t4t5.github.io/sweetalert/>Sweet Alert</a>, through <a href=https://github.com/mois3x/sweet-alert-rails-confirm>sweet-alert-rails-confirm</a></li>
