--- a/buddybeats/app/views/playlists/about.html.erb
+++ b/buddybeats/app/views/playlists/about.html.erb
@@ -11,12 +11,12 @@
 </p>
 <p>
   <ul>
-    <li>Background image courtesy of <a href=https://pixabay.com/en/headphones-headset-audio-technology-690685/>Pixabay</a></li>
-    <li>Logo provided by <a href=http://www.simrankhosla.com/>Simran Khosla</a></li>
-    <li><a href=https://developers.google.com/youtube/v3/>YouTube Data API</a></li>
-    <li><a href=https://developer.spotify.com/web-api/>Spotify Web API</a></li>
-    <li><a href=http://t4t5.github.io/sweetalert/>Sweet Alert</a>, through <a href=https://github.com/mois3x/sweet-alert-rails-confirm>sweet-alert-rails-confirm</a></li>
-    <li><a href=http://railscasts.com/episodes/274-remember-me-reset-password?view=asciicast>RailsCasts</a>, for password reset</li>
+    <li>Background image courtesy of <a href="https://pixabay.com/en/headphones-headset-audio-technology-690685" target="_blank">Pixabay</a></li>
+    <li>Logo provided by <a href="http://www.simrankhosla.com" target="_blank">Simran Khosla</a></li>
+    <li><a href="https://developers.google.com/youtube/v3" target="_blank">YouTube Data API</a></li>
+    <li><a href="https://developer.spotify.com/web-api" target="_blank">Spotify Web API</a></li>
+    <li><a href="http://t4t5.github.io/sweetalert" target="_blank">Sweet Alert</a>, through <a href="https://github.com/mois3x/sweet-alert-rails-confirm" target="_blank">sweet-alert-rails-confirm</a></li>
+    <li><a href="http://railscasts.com/episodes/274-remember-me-reset-password?view=asciicast" target="_blank">RailsCasts</a>, for password reset</li>
   </ul>
 
 </p>
